--- a/index.html
+++ b/index.html
@@ -17,18 +17,27 @@
       background-color: #f0f0f0;
       border: 1px solid #ccc;
     }
+
+    /* Estilo para as imagens dos QR codes */
+    .qr-code-image {
+      margin-bottom: 20px;
+    }
+    .qr-code-image img {
+      display: block;
+      margin: 0 auto;
+    }
   </style>
-  <script src="https://cdn.jsdelivr.net/npm/qrious/dist/qrious.min.js"></script>
   <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcode@1.4.4/qrcode.min.js"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
 <body>
   <h1>Leitor de QR Code</h1>
   <video id="preview" playsinline autoplay></video>
   <ul id="output-list"></ul> <!-- Lista para exibir os QR codes lidos -->
-  <button onclick="generateQrCodeImages()">Gerar Lista PNG</button> <!-- Botão para gerar lista PNG -->
+  <div id="qr-code-images"></div> <!-- Div para exibir as imagens dos QR codes -->
 
   <script>
-    // Cria um objeto Scanner Instascan com a configuração do vídeo e sem espelhamento
     let scanner = new Instascan.Scanner({ 
       video: document.getElementById('preview'),
       mirror: false // Não espelha o vídeo (opcional)
@@ -36,21 +45,18 @@
 
     let qrCodes = []; // Array para armazenar os QR codes lidos
 
-    // Adiciona um ouvinte de evento para processar o QR code lido
     scanner.addListener('scan', function (content) {
-      // Verifica se o QR code já foi lido antes de adicioná-lo
       if (!qrCodes.includes(content)) {
         qrCodes.push(content); // Adiciona o QR code lido ao array
         updateQrCodeList(); // Atualiza a lista na página
+        generateQRCodeImage(content); // Gera a imagem PNG do QR code
       }
     });
 
-    // Função para atualizar a lista de QR codes na página
     function updateQrCodeList() {
       let outputList = document.getElementById('output-list');
       outputList.innerHTML = ''; // Limpa a lista atual
 
-      // Itera sobre o array de QR codes e cria itens de lista para cada um
       qrCodes.forEach(function (qrCode) {
         let listItem = document.createElement('li');
         listItem.textContent = qrCode;
@@ -58,39 +64,25 @@
       });
     }
 
-    // Função para gerar imagens PNG dos QR codes lidos
-    function generateQrCodeImages() {
-      qrCodes.forEach(function(qrCode, index) {
-        // Cria um elemento <canvas> temporário para renderizar o QR code
-        let canvas = document.createElement('canvas');
-        let context = canvas.getContext('2d');
-  
-        // Configura o tamanho do canvas
-        canvas.width = 200; // Largura
-        canvas.height = 200; // Altura
-  
-        // Cria um objeto QRious com o conteúdo do QR code atual
-        let qr = new QRious({
-          element: canvas,
-          value: qrCode,
-          size: 200 // Tamanho do QR code
-        });
-  
-        // Cria um link de download para o PNG do QR code
-        let link = document.createElement('a');
-        link.href = canvas.toDataURL('image/png'); // Converte o canvas para data URL PNG
-        link.download = `qr_code_${index + 1}.png`; // Nome do arquivo para download
-        link.textContent = `QR Code ${index + 1}`; // Texto do link
-  
-        // Cria um parágrafo <p> para exibir o conteúdo do QR code
-        let paragraph = document.createElement('p');
-        paragraph.textContent = `Conteúdo do QR Code ${index + 1}: ${qrCode}`;
-  
-        // Adiciona a imagem, o parágrafo e uma quebra de linha à página
-        document.body.appendChild(link);
-        document.body.appendChild(paragraph);
-        document.body.appendChild(document.createElement('br')); // Quebra de linha para separar os elementos
+    function generateQRCodeImage(content) {
+      let qrCodeDiv = document.createElement('div');
+      qrCodeDiv.classList.add('qr-code-image');
+      let qrCodeImage = document.createElement('img');
+      let qrCodeCanvas = document.createElement('canvas');
+
+      // Cria um novo QR code usando qrcode.js
+      let qr = new QRCode(qrCodeCanvas, {
+        text: content,
+        width: 200,
+        height: 200
       });
+
+      // Adiciona a imagem do QR code ao div
+      qrCodeImage.src = qrCodeCanvas.toDataURL('image/png');
+      qrCodeDiv.appendChild(qrCodeImage);
+
+      // Adiciona o div com a imagem ao elemento específico na página
+      document.getElementById('qr-code-images').appendChild(qrCodeDiv);
     }
 
     // Inicializa o scanner com a câmera traseira
